@@ -1622,45 +1622,6 @@ package TestCase::Lib::SPVM::CORE {
     return 1;
   }
 
-  sub test_copy_oarray : int () {
-    my $objects = [(object)SPVM::Int->new(1), SPVM::Int->new(2), SPVM::Int->new(INT32_MIN())];
-    my $objects_out = copy_oarray($objects);
-
-    unless ($objects->[0] == $objects_out->[0]) {
-      return 0;
-    }
-    
-    unless ($objects->[1] == $objects_out->[1]) {
-      return 0;
-    }
-    
-    unless ($objects->[2] == $objects_out->[2]) {
-      return 0;
-    }
-    
-    unless ((int)$objects->[0] == 1) {
-      return 0;
-    }
-    
-    unless ((int)$objects->[1] == 2) {
-      return 0;
-    }
-    
-    unless ((int)$objects->[2] == INT32_MIN()) {
-      return 0;
-    }
-    
-    unless (@$objects_out == 3) {
-      return 0;
-    }
-    
-    unless ($objects != $objects_out) {
-      return 0;
-    }
-    
-    return 1;
-  }
-
   sub test_copy_strarray : int () {
     my $strings = ["abc", "def", "hij"];
     my $strings_out = copy_strarray($strings);
