@@ -1,6 +1,49 @@
 package TestCase::Lib::SPVM::Util {
-  use SPVM::Util(joino, split);
+  use SPVM::Util(joino, split, copy_oarray);
   use TestCase::Minimal;
+
+  sub test_copy_oarray : int () {
+    my $objects = [(object)SPVM::Int->new(1), SPVM::Int->new(2), SPVM::Int->new(INT32_MIN())];
+    my $objects_out = copy_oarray($objects, sub clone : object ($self : self, $obj : object) {
+      my $int_obj = (SPVM::Int)$obj;
+      my $new_int_obj = SPVM::Int->new($int_obj->val);
+      return $new_int_obj;
+    });
+
+    if ($objects->[0] == $objects_out->[0]) {
+      return 0;
+    }
+    
+    if ($objects->[1] == $objects_out->[1]) {
+      return 0;
+    }
+    
+    if ($objects->[2] == $objects_out->[2]) {
+      return 0;
+    }
+    
+    unless ((int)$objects_out->[0] == 1) {
+      return 0;
+    }
+    
+    unless ((int)$objects_out->[1] == 2) {
+      return 0;
+    }
+    
+    unless ((int)$objects_out->[2] == INT32_MIN()) {
+      return 0;
+    }
+    
+    unless (@$objects_out == 3) {
+      return 0;
+    }
+    
+    unless ($objects != $objects_out) {
+      return 0;
+    }
+    
+    return 1;
+  }
   
   sub test_joino : int () {
     
