@@ -21,6 +21,11 @@ my $start_memory_blocks_count = SPVM::memory_blocks_count();
   ok(TestCase::Lib::SPVM::Util->test_split);
 }
 
+# copy_oarray
+{
+  ok(TestCase::Lib::SPVM::Util->test_copy_oarray);
+}
+
 # All object is freed
 my $end_memory_blocks_count = SPVM::memory_blocks_count();
 is($end_memory_blocks_count, $start_memory_blocks_count);
